--- a/src/Login/LoginBundle/Resources/config/routing.yml
+++ b/src/Login/LoginBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 login_login_homepage:
-    pattern:  /hello/{name}
+    pattern:  /login
     defaults: { _controller: LoginLoginBundle:Default:index }
+
+login_login_signup:
+    pattern:  /signup
+    defaults: { _controller: LoginLoginBundle:Default:signup }
